py-powerline*: change category to sysutils

--- a/python/py-powerline-exitstatus-kai/Portfile
+++ b/python/py-powerline-exitstatus-kai/Portfile
@@ -8,7 +8,7 @@ github.setup        i0ntempest powerline-exitstatus-kai 1.2.0 v
 revision            0
 name                py-powerline-exitstatus-kai
 
-categories-append   devel
+categories-append   sysutils
 license             MIT
 maintainers         {i0ntempest @i0ntempest} openmaintainer
 
