--- a/python/py-powerline-gitstatus/Portfile
+++ b/python/py-powerline-gitstatus/Portfile
@@ -7,7 +7,7 @@ name                py-powerline-gitstatus
 version             1.3.1
 revision            0
 
-categories-append   devel
+categories-append   sysutils
 license             MIT
 maintainers         {i0ntempest @i0ntempest} openmaintainer
 
