--- a/python/py-powerline/Portfile
+++ b/python/py-powerline/Portfile
@@ -8,7 +8,7 @@ github.setup        powerline powerline 2.8.3
 revision            0
 name                py-powerline
 
-categories-append   devel
+categories-append   sysutils
 license             MIT
 maintainers         {i0ntempest @i0ntempest} openmaintainer
 
