netdata: update to 1.44.3

--- a/sysutils/netdata/Portfile
+++ b/sysutils/netdata/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 PortGroup               github          1.0
 PortGroup               legacysupport   1.1
 
-github.setup            netdata netdata 1.44.2 v
+github.setup            netdata netdata 1.44.3 v
 github.tarball_from     releases
 revision                0
 
@@ -32,16 +32,16 @@ depends_build-append    port:autoconf \
                         port:pkgconfig
 
 depends_lib-append      lib:libuuid:libuuid \
+                        path:lib/libssl.dylib:openssl \
                         path:lib/pkgconfig/libuv.pc:libuv \
                         port:json-c \
                         port:judy \
                         port:libyaml \
-                        port:lz4 \
-                        port:openssl
+                        port:lz4
 
-checksums               rmd160  ff2566d962db9862cd556c5c1317a6898f584905 \
-                        sha256  9b9267b03af90fe8754f2fb5d16f7f6c60f770d2e890dbc55fd9dcdfd2a4179a \
-                        size    47429417
+checksums               rmd160  19b8e1b7270061de8ecbb7333fc7993dcea4871b \
+                        sha256  50df30a9aaf60d550eb8e607230d982827e04194f7df3eba0e83ff7919270ad2 \
+                        size    47423113
 
 configure.args          --disable-dependency-tracking \
                         --disable-silent-rules \
