bitchx: fix build with Clang > 13
* remove platforms line

--- a/irc/bitchx/Portfile
+++ b/irc/bitchx/Portfile
@@ -2,7 +2,7 @@ PortSystem 1.0
 
 name		bitchx
 version		1.2.1
-revision	2
+revision	3
 categories	irc
 license             BSD
 maintainers	nomaintainer
@@ -13,7 +13,6 @@ long_description	BitchX is an IRC (Internet Relay Chat) client by Colten Edwards
 			for the popular UNIX IRC client ircII. Around Christmas of 1994 the \
 			script was patched directly into the client by panasync.
 homepage	http://www.bitchx.org/
-platforms	darwin
 master_sites	sourceforge:project/${name}/ircii-pana/${name}-${version}
 
 checksums           rmd160  0bf85169f26297fe517b2886f8b9693c360f32f7 \
@@ -22,8 +21,10 @@ checksums           rmd160  0bf85169f26297fe517b2886f8b9693c360f32f7 \
 
 depends_lib         path:lib/libssl.dylib:openssl
 
+# backported from https://github.com/freebsd/freebsd-ports/commit/7075120b4d50ebba264775ce8a5bcbcafd1d99a2
 # backported from https://sourceforge.net/p/bitchx/git/ci/184af728c73c379d1eee57a387b6012572794fa8/
-patchfiles          patch-openssl11.diff
+patchfiles          patch-expr2.diff \
+                    patch-openssl11.diff
 
 # the patch above modifies configure.in
 use_autoreconf      yes
