dotnet-runtime-7: update to 7.0.16

--- a/dotnet/dotnet-runtime-7/Portfile
+++ b/dotnet/dotnet-runtime-7/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                dotnet-runtime-7
-version             7.0.15
+version             7.0.16
 revision            0
 categories          dotnet
 license             MIT
@@ -25,15 +25,15 @@ supported_archs     x86_64 arm64
 switch ${build_arch} {
     x86_64 {
         distname            dotnet-runtime-${version}-osx-x64
-        checksums           rmd160  f3abbcbb179f25c5d00cec8378d08d75b3b5be89 \
-                            sha256  d1f353a00108de4a95d823ccbdb139db9826eb0224a4e573092296b14fff2dc0 \
-                            size    30848396
+        checksums           rmd160  34526ef19cf9a50fbc133206a62436dc99f0b74f \
+                            sha256  e2ea5fe9225185876a87f2a69f0e8e5a28051e1fb92e44ed778b0c0669c4cfaa \
+                            size    30850083
     }
     arm64 {
         distname            dotnet-runtime-${version}-osx-arm64
-        checksums           rmd160  6c3a1bb652a1bcd3b69f90f194dbad708f2de519 \
-                            sha256  a1233530e3840c92132032859b80990356f769b90f3105ad9e22828d32311bcc \
-                            size    29181043
+        checksums           rmd160  9a697d3a4158cfda04780cb88acaa2ddea69cce9 \
+                            sha256  113b162abc015d0dbeb580cd3f187b4f04db3268828f8796c5ca93ec90c0ccda \
+                            size    29180416v
     }
     default {
         known_fail yes
