p5-dbd-mysql: Fix error where wrong database was installed
  Fix all variants to properly parse dependencies. The main culprit
  was missing start brackes after the description field

Closes: https://trac.macports.org/ticket/69359

--- a/perl/p5-dbd-mysql/Portfile
+++ b/perl/p5-dbd-mysql/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 perl5.branches      5.28 5.30 5.32 5.34
 perl5.setup         DBD-mysql 5.003 ../../authors/id/D/DV/DVEEDEN
-revision            0
+revision            1
 license             {Artistic-1 GPL}
 maintainers         nomaintainer
 description         Perl5 Database Interface to the MySQL database
@@ -26,65 +26,56 @@ if {${perl5.major} != ""} {
     depends_lib-append \
                     port:p${perl5.major}-dbi
 
-    variant mysql8  conflicts mysql81 mysql82 \
-                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
-                    percona description {build with mysql8 port} {
+    variant mysql8 conflicts mysql81 mysql82 mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
+        description {build with mysql8 port} {
         depends_lib-append      port:mysql8
         configure.args-append   --mysql_config=${prefix}/lib/mysql8/bin/mysql_config
     }
 
-    variant mysql81  conflicts mysql8 mysql82 \
-                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
-                    percona description {build with mysql81 port} {
+    variant mysql81 conflicts mysql8 mysql82 mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
+        description {build with mysql81 port} {
         depends_lib-append      port:mysql81
         configure.args-append   --mysql_config=${prefix}/lib/mysql81/bin/mysql_config
     }
 
-    variant mysql82  conflicts mysql8 mysql81 \
-                    mariadb10_4 mariadb10_5 mariadb10_6  mariadb10_10 mariadb10_11 \
-                    percona description {build with mysql82 port} {
+    variant mysql82 conflicts mysql8 mysql81 mariadb10_4 mariadb10_5 mariadb10_6  mariadb10_10 mariadb10_11 \
+        description {build with mysql82 port} {
         depends_lib-append      port:mysql82
         configure.args-append   --mysql_config=${prefix}/lib/mysql82/bin/mysql_config
     }
 
-    variant mariadb10_4 conflicts mysql8 mysql81 mysql82 \
-                    mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
-                    percona description {build with mariadb-10.4 port} {
+    variant mariadb10_4 conflicts mysql8 mysql81 mysql82 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
+        description {build with mariadb-10.4 port} {
         depends_lib-append      port:mariadb-10.4
         configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.4/bin/mysql_config
     }
 
-    variant mariadb10_5 conflicts mysql8 mysql81 mysql82 \
-                    mariadb10_4 mariadb10_6 mariadb10_10 mariadb10_11 \
-                    percona description {build with mariadb-10.5 port} {
+    variant mariadb10_5 conflicts mysql8 mysql81 mysql82 mariadb10_4 mariadb10_6 mariadb10_10 mariadb10_11 \
+        description {build with mariadb-10.5 port} {
         depends_lib-append      port:mariadb-10.5
         configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
     }
 
-    variant mariadb10_6 conflicts mysql8 mysql81 mysql82 \
-                    mariadb10_4 mariadb10_5 mariadb10_10 mariadb10_11 \
-                    percona description {build with mariadb-10.5 port} {
-        depends_lib-append      port:mariadb-10.5
-        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
+    variant mariadb10_6 conflicts mysql8 mysql81 mysql82 mariadb10_4 mariadb10_5 mariadb10_10 mariadb10_11 \
+        description {build with mariadb-10.6 port} {
+        depends_lib-append      port:mariadb-10.6
+        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.6/bin/mysql_config
     }
 
-    variant mariadb10_10 conflicts mysql8 mysql81 mysql82 \
-                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_11 \
-                    percona description {build with mariadb-10.5 port} {
-        depends_lib-append      port:mariadb-10.5
-        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
+    variant mariadb10_10 conflicts mysql8 mysql81 mysql82 mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_11 \
+        description {build with mariadb-10.10 port} {
+        depends_lib-append      port:mariadb-10.10
+        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.10/bin/mysql_config
     }
 
-    variant mariadb10_11 conflicts mysql8 mysql81 mysql82 \
-                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 \
-                    percona description {build with mariadb-10.5 port} {
-        depends_lib-append      port:mariadb-10.5
-        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
+    variant mariadb10_11 conflicts mysql8 mysql81 mysql82 mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 \
+        description {build with mariadb-10.11 port} {
+        depends_lib-append      port:mariadb-10.11
+        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.11/bin/mysql_config
     }
 
-    variant percona conflicts mysql8 mysql81 mysql82 \
-                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
-                    description {build with percona port} {
+    variant percona conflicts mysql8 mysql81 mysql82 mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
+        description {build with percona port} {
         depends_lib-append      port:percona
         configure.args-append   --mysql_config=${prefix}/lib/percona/bin/mysql_config
     }
