kokkos: update to 4.2.01; kokkos-devel: update to 2024.02.18

--- a/devel/kokkos/Portfile
+++ b/devel/kokkos/Portfile
@@ -4,7 +4,7 @@ PortSystem                  1.0
 PortGroup                   github 1.0
 PortGroup                   cmake 1.1
 
-github.setup                kokkos kokkos 3.7.01
+github.setup                kokkos kokkos 4.2.01
 conflicts                   kokkos-devel
 revision                    0
 categories                  devel
@@ -13,31 +13,23 @@ maintainers                 {mcalhoun @MarcusCalhoun-Lopez} openmaintainer
 description                 implements a programming model in C++ for writing performance portable applications targeting all major HPC platforms
 long_description            Kokkos Core {*}${description}.
 
-checksums                   rmd160  b73fbb7e3cc532545100412415bcb602414f7656 \
-                            sha256  b9888a524345dd3ad6c6bb04b2e3e7f854a5caf61c3b09b628f2b1526ec45105 \
-                            size    2305267
+checksums                   rmd160  e66cfd2a690b79c70d8ea5aa1df5e58ef9d93fd5 \
+                            sha256  e180471455053a671ab57d5054bcb7ccfb5cc75960ad9a6fe4903191475fff53 \
+                            size    2423148
 
 subport kokkos-devel {
-    github.setup            kokkos kokkos 86f5bb7d892b74defdcde7da8866bb9a5d5afbd4
-    version                 2024.01.18
+    github.setup            kokkos kokkos e67ce088d0cfce03f7227c8649b6eedb097a614d
+    version                 2024.02.18
     conflicts               kokkos
     maintainers-append      {@barracuda156 gmail.com:vital.had}
-    checksums               rmd160  f6e242dda55e8bac9eb93f200669de3ecaeefcf5 \
-                            sha256  414cb1054cec5c0d4d5f3fc53bc59de756b6cb73b12bb094b02aaf17f74d6d56 \
-                            size    2419081
+    checksums               rmd160  cbfd2a76b2c7392c7036477bd55a00facd5f086f \
+                            sha256  7e049da00a3a870c0836825cbf68993cd72462908386517f2395f7060678047d \
+                            size    2414635
     github.tarball_from     archive
-    # 32-bit support added in: https://github.com/kokkos/kokkos/pull/5916
-
-    compiler.cxx_standard   2017
+    github.livecheck.branch develop
 }
 
-if {${subport} ne "kokkos-devel"} {
-    # Keep this until support for 32-bit platforms is merged into master.
-    # https://github.com/kokkos/kokkos/blob/5ad609661e570ba6aa7716a26a91cb67d559f8a2/CMakeLists.txt#L126
-    supported_archs         arm64 x86_64 ppc64
-}
-
-compiler.cxx_standard       2014
+compiler.cxx_standard       2017
 compiler.openmp_version     4.0
 
 depends_lib-append          port:hwloc
@@ -47,13 +39,11 @@ configure.args-append       -DBUILD_SHARED_LIBS=ON \
                             -DKokkos_ENABLE_SERIAL=ON \
                             -DKokkos_ENABLE_HWLOC=ON
 
-if {${subport} eq "kokkos-devel"} {
-    if {[string match *clang* ${configure.compiler}]} {
-        # https://github.com/macports/macports-ports/pull/17877#discussion_r1183486766
-        configure.ldflags-append \
+if {[string match *clang* ${configure.compiler}]} {
+    # https://github.com/macports/macports-ports/pull/17877#discussion_r1183486766
+    configure.ldflags-append \
                             -L${prefix}/lib/libomp \
                             -lomp
-    }
 }
 
 variant tests description {Enable tests} {
