R-DBI: update to 1.2.2.9001; R-DBItest: update to 1.8.0.9009

--- a/R/R-DBI/Portfile
+++ b/R/R-DBI/Portfile
@@ -3,17 +3,20 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github r-dbi DBI 1.2.1.9000 v
+R.setup             github r-dbi DBI 1.2.2.9001 v
 revision            0
 categories-append   databases
-maintainers         {@krlmlr cynkra.com:kirill} {@barracuda156 gmail.com:vital.had} openmaintainer
+maintainers         {@krlmlr cynkra.com:kirill} \
+                    {@barracuda156 gmail.com:vital.had} \
+                    openmaintainer
 license             LGPL-2.1+
-description         A database interface (DBI) definition for communication between R and RDBMSs
+description         A database interface (DBI) definition for communication \
+                    between R and RDBMSs
 long_description    {*}${description}
 homepage            https://dbi.r-dbi.org
-checksums           rmd160  9608ece40c5b3bc104203763792b648b4330f5c7 \
-                    sha256  21a7ffbeb19af5c073f02fd19e0afdb555c8c2052b60db1c1183b31610c85697 \
-                    size    240688
+checksums           rmd160  ff45763f341fdbd538ce2c308a86573b2d99bcf8 \
+                    sha256  0e3a06cdfda94618450b695e04ddc00ae1674be170ffd59f4087d059f3c30e03 \
+                    size    282696
 supported_archs     noarch
 
 depends_test-append port:R-blob \
