--- a/R/R-DBItest/Portfile
+++ b/R/R-DBItest/Portfile
@@ -3,17 +3,19 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github r-dbi DBItest 1.8.0.9006 v
+R.setup             github r-dbi DBItest 1.8.0.9009 v
 revision            0
 categories-append   databases devel
-maintainers         {@krlmlr cynkra.com:kirill} {@barracuda156 gmail.com:vital.had} openmaintainer
+maintainers         {@krlmlr cynkra.com:kirill} \
+                    {@barracuda156 gmail.com:vital.had} \
+                    openmaintainer
 license             LGPL-2.1+
 description         Testing for DBI backends
 long_description    {*}${description}
 homepage            https://dbitest.r-dbi.org
-checksums           rmd160  8e4fce6e7623e1a8d8efea98c8a664341e35cc2a \
-                    sha256  a57f1b7e643c6e98a6d56b21b6aea989028e825cd2f2e3a21a8f68b05b801971 \
-                    size    145728
+checksums           rmd160  fca53462f8fd80e94ba2ba3da8df6462b58fb52d \
+                    sha256  30afc2e505a789f3e36b1aff3c65093831ee9ada5198b14f89c787363bab44f9 \
+                    size    149195
 supported_archs     noarch
 
 depends_lib-append  port:R-blob \
