--- a/R/R-TeachingDemos/Portfile
+++ b/R/R-TeachingDemos/Portfile
@@ -3,13 +3,25 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran cran TeachingDemos 2.12.1
+R.setup             cran 538280 TeachingDemos 2.13
 revision            0
 maintainers         nomaintainer
 license             Artistic-2
 description         Demonstrations for teaching and learning
 long_description    {*}${description}
-checksums           rmd160  064d1d4aad09b2f5a8550cc04ae165e0fe7087cb \
-                    sha256  f5b189c767b76594808ae678b7e4b1e0e6bf0cee80c70df9e41edfb81aaaf3a8 \
-                    size    284530
+checksums           rmd160  1bea1967d100201182e2bc0a0602c10fc2effadb \
+                    sha256  f80eb952b7d1a0cde3bed8152f9c4e9eceaa3f635209b2af9a11e785e8c0fbcc \
+                    size    343030
 supported_archs     noarch
+
+depends_test-append port:R-ggplot2 \
+                    port:R-logspline \
+                    port:R-manipulate \
+                    port:R-png \
+                    port:R-rgl \
+                    port:R-sf \
+                    port:R-spData \
+                    port:R-tcltk2 \
+                    port:R-tkrplot
+
+test.run            yes
