--- a/www/adblock2privoxy/Portfile
+++ b/www/adblock2privoxy/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                adblock2privoxy
-version             2.2.0
+version             2.3.0
 revision            0
 categories          www haskell
 maintainers         {ieee.org:s.t.smith @essandess} openmaintainer
@@ -32,15 +32,14 @@ long_description    {*}${description}. \
 
 homepage            https://github.com/essandess/adblock2privoxy
 
-master_sites        https://hackage.haskell.org/package/${name}-${version}
-
-checksums           rmd160  0ee221d7c1d0abc0494347eb27e98a0e8e30f5f3 \
-                    sha256  992fd7279e4e24508a6c3da556bb8c34a98dcbd881cadb2b075c2bbb80c8ec64 \
-                    size    42522
+checksums           rmd160  2c672d9742a76fd01f0715e2b0ac45c4a6f4a9bd \
+                    sha256  bd6a0b2f7a922a314608392ff2aad299f28337c5c97d6723b03c7abdfb4c5f29 \
+                    size    44257
 
 depends_lib-append  port:zlib
 
-depends_run-append  port:nginx \
+depends_run-append  port:bash \
+                    port:nginx \
                     port:privoxy \
                     port:wget
 
@@ -118,10 +117,21 @@ if { [variant_isset "stack"] } {
 }
 
 post-destroot {
+    xinstall -m 0644 -W ${worksrcpath} \
+        man/man1/${name}.1 \
+        ${destroot}${prefix}/share/man/man1
+
     xinstall -d \
         ${destroot}${prefix}/etc/${name} \
-        ${destroot}${prefix}/etc/${name}/privoxy \
-        ${destroot}${prefix}/etc/${name}/css
+        ${destroot}${prefix}/etc/${name}/bin \
+        ${destroot}${prefix}/etc/${name}/css \
+        ${destroot}${prefix}/etc/${name}/privoxy
+
+    xinstall -m 0755 -W ${filespath} \
+        adblock2privoxy_initialize.sh \
+        ${destroot}${prefix}/etc/${name}/bin
+    reinplace "s|@PREFIX@|${prefix}|g" \
+        ${destroot}${prefix}/etc/${name}/bin/adblock2privoxy_initialize.sh
 
     xinstall -m 0644 -W ${filespath} \
         adblock2privoxy_blocklist.txt \
@@ -134,10 +144,6 @@ post-destroot {
         ${destroot}${prefix}/etc/${name}/css/default.html.macports
     reinplace "s|@PREFIX@|${prefix}|g" \
         ${destroot}${prefix}/etc/${name}/nginx.conf.macports
-
-    xinstall -m 0644 -W ${filespath} \
-        private.myserver.launchctl-setenv.plist \
-        ${destroot}${prefix}/share/${name}
 }
 
 set tls_ca_dir      ${prefix}/etc/${name}/ca.macports
@@ -483,14 +489,20 @@ if { ![variant_isset "https_inspection"] } {
 startupitem.create  yes
 startupitems \
     name            ${name} \
-    init            "ADBLOCK2PRIVOXY_CSS_SERVER=\"\${ADBLOCK2PRIVOXY_CSS_SERVER:-${adblock2privoxy_css_server}}\"" \
-    start [list     "( IFS=\$'\\n' ADBLOCK2PRIVOXY_BLOCKLIST=(\$(grep -v -e '^ *#' < \${prefix}/etc/${name}/adblock2privoxy_blocklist.txt \\" \
+    init [list      "if \[ -f \"\${prefix}/etc/adblock2privoxy/ADBLOCK2PRIVOXY.env\" ]; then" \
+                    "\tset -a" \
+                    "\t. <(grep -E -o -e '^\[\[:alnum:]_]+=\[^\[:space:]\;]+\$' \"${prefix}/etc/adblock2privoxy/ADBLOCK2PRIVOXY.env\" | grep -E -v '^\[\[:space:]]*(#|\$)|\\\$\\(|`')" \
+                    "\tset +a" \
+                    "fi" \
+                    "ADBLOCK2PRIVOXY_CSS_SERVER=\"\${ADBLOCK2PRIVOXY_CSS_SERVER:-${adblock2privoxy_css_server}}\"" \
+    ] \
+    start [list     "( IFS=\$'\\n' ADBLOCK2PRIVOXY_BLOCKLIST=(\$(grep -v -e '^ *#' < \"\${prefix}/etc/${name}/adblock2privoxy_blocklist.txt\" \\" \
                     "\t| while read -r t; do if \"\${prefix}/bin/wget\" --max-redirect=0 -S --spider \"\${t}\" 2>&1 | grep -q 'HTTP/1.1 200 OK'; then echo \"\${t}\"; fi done)); \\" \
                     "/bin/test -f \"\${prefix}/etc/adblock2privoxy/privoxy/ab2p.task\" \\" \
                     "&& \"\${prefix}/bin/adblock2privoxy\" -t \"\${prefix}/etc/adblock2privoxy/privoxy/ab2p.task\" \\" \
                     "|| \"\${prefix}/bin/adblock2privoxy\" -p \"\${prefix}/etc/adblock2privoxy/privoxy\" \\" \
                     "\t-w \"\${prefix}/etc/adblock2privoxy/css\" \\" \
-                    "\t-d \${ADBLOCK2PRIVOXY_CSS_SERVER} ${ab2p_use_http_flag} \\" \
+                    "\t-d \"\${ADBLOCK2PRIVOXY_CSS_SERVER}\" ${ab2p_use_http_flag} \\" \
                     "\t\"\${ADBLOCK2PRIVOXY_BLOCKLIST\[@]}\" \\" \
                     ") && \"\${prefix}/bin/port\" reload privoxy" \
     ] \
@@ -513,8 +525,12 @@ startupitems-append \
                     "fi" \
     ]
 
-post-activate {
+post-destroot {
     # org.macports.adblock2privoxy
+    reinplace -E \
+        "1s|^(#!\[\[:space:]]*)/bin/sh|\\1/usr/bin/env bash|" \
+        ${destroot}${prefix}/etc/${startupitem.location}/org.macports.${name}/${name}.wrapper
+
     reinplace \
         "s|^<key>ProgramArguments</key>|<key>StartCalendarInterval</key>\\
 	<array>\\
@@ -532,8 +548,10 @@ post-activate {
 	<key>StandardOutPath</key>\\
 	<string>${prefix}/var/log/${name}.log</string>\\
 &|" \
-        ${prefix}/etc/${startupitem.location}/org.macports.${name}/org.macports.${name}.plist
+        ${destroot}${prefix}/etc/${startupitem.location}/org.macports.${name}/org.macports.${name}.plist
+}
 
+post-activate {
     foreach f [list \
         ${prefix}/etc/${name}/adblock2privoxy_blocklist.txt \
         ${prefix}/etc/${name}/nginx.conf \
@@ -579,15 +597,16 @@ Update run:
   adblock2privoxy -t ${prefix}/etc/adblock2privoxy/privoxy/ab2p.task
 
 The CSS web server domain name or IP address is specified by the\
-environment variables (with default values):
+environment variable ADBLOCK2PRIVOXY_CSS_SERVER (with default value):
 
-  \${ADBLOCK2PRIVOXY_CSS_SERVER:-${adblock2privoxy_css_server}}
+  ADBLOCK2PRIVOXY_CSS_SERVER=${adblock2privoxy_css_server}
 
-To change site-specific launchd environment variables,\
-use the launchd plist:
+To change this or site-specific environment variables, set them in the\
+optional file
 
-  ${prefix}/share/${name}/private.myserver.launchctl-setenv.plist
+  ${prefix}/etc/adblock2privoxy/ADBLOCK2PRIVOXY.env
 
+Please note that the macOS command `launchctl setenv` is now prohibited by SIP.
 "
 
 if { [variant_isset "initialize_always"] } {
