R-igraph: update to 2.0.2

--- a/R/R-igraph/Portfile
+++ b/R/R-igraph/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran igraph igraph 2.0.1.1
+R.setup             cran igraph igraph 2.0.2
 revision            0
 maintainers         {gmail.com:szhorvat @szhorvat} {@barracuda156 gmail.com:vital.had} openmaintainer
 license             GPL-2+
@@ -13,16 +13,9 @@ long_description    Routines for simple graphs and network analysis. \
                     for generating random and regular graphs, graph visualization, \
                     centrality methods and much more.
 homepage            https://igraph.org/r
-checksums           rmd160  0a1bf6e2508e27cb842a15c83f6db18f19d394d0 \
-                    sha256  1bb6c40a44a7aeba352c4d8bf8231e6948dfa8b9925ab99f96feba53e9f48866 \
-                    size    4956775
-
-# Until fixed in upstream:
-# https://github.com/igraph/rigraph/issues/1172
-if {${configure.build_arch} in [list arm i386 ppc]} {
-    patchfiles-append \
-                    patch-no-uint128.diff
-}
+checksums           rmd160  35d0fb8dd4de3645f0e55049979134803a4a3db6 \
+                    sha256  34f9d5b778c2f41a024183cc3613a1716660f7e3ffb74a2af88c14efe94acc4d \
+                    size    4965448
 
 depends_lib-append  path:lib/pkgconfig/icu-uc.pc:icu \
                     port:glpk \
@@ -33,7 +26,8 @@ depends_lib-append  path:lib/pkgconfig/icu-uc.pc:icu \
                     port:R-lifecycle \
                     port:R-magrittr \
                     port:R-pkgconfig \
-                    port:R-rlang
+                    port:R-rlang \
+                    port:R-vctrs
 
 compilers.setup     require_fortran
 
