R-mastif: update to 2.2

--- a/R/R-mastif/Portfile
+++ b/R/R-mastif/Portfile
@@ -3,15 +3,16 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran jimclark mastif 2.1
+R.setup             cran jimclark mastif 2.2
 revision            0
 maintainers         nomaintainer
 license             GPL-2+
-description         Analyze production and dispersal of seeds dispersed from trees and recovered in seed traps
+description         Analyze production and dispersal of seeds \
+                    dispersed from trees and recovered in seed traps
 long_description    {*}${description}
-checksums           rmd160  baca2669e703f5f8c1790b445c4048c6372421b7 \
-                    sha256  4397a8ceabdd533b511baef09b032db2455fa0f354056aa083957c620f616a25 \
-                    size    260931
+checksums           rmd160  e1292b38138d08c614fa1dd0cbac5932fd5bd6fe \
+                    sha256  e906da84604c0b339353196b64f90f3bb374747a5375935ffa1e6ac3f88526a6 \
+                    size    262041
 
 depends_lib-append  port:R-corrplot \
                     port:R-RANN \
