go-1.4: set platforms to darwin < 21
Closes: https://trac.macports.org/ticket/63673

--- a/lang/go-1.4/Portfile
+++ b/lang/go-1.4/Portfile
@@ -7,7 +7,8 @@ name                go-1.4
 version             1.4.3
 revision            1
 categories          lang
-platforms           darwin
+# https://trac.macports.org/ticket/63673
+platforms           {darwin < 21}
 license             BSD
 maintainers         {ciserlohn @ci42}
 description         compiled, garbage-collected, concurrent programming \
