fpm: backport a fix for i386

--- a/devel/fpm/Portfile
+++ b/devel/fpm/Portfile
@@ -6,7 +6,7 @@ PortGroup           compilers 1.0
 PortGroup           github 1.0
 
 github.setup        fortran-lang fpm 0.10.0 v
-revision            0
+revision            1
 categories          devel fortran
 license             MIT
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -40,6 +40,10 @@ if {${os.platform} eq "darwin" && ${os.major} < 10} {
 }
 
 patchfiles          patch-install.diff
+
+# Drop with the next release.
+# https://github.com/fortran-lang/fpm/commit/168ab68f03483e371b38345c34bb6998b1f93f5c
+patchfiles-append   patch-filesystem_utilities.c-INODE64.diff
 
 post-patch {
     reinplace "s,@FC@,${configure.fc}," ${worksrcpath}/install.sh
