libffi: update to 3.4.5

--- a/devel/libffi/Portfile
+++ b/devel/libffi/Portfile
@@ -4,7 +4,13 @@ PortSystem          1.0
 PortGroup           muniversal 1.0
 PortGroup           github 1.0
 
-github.setup        libffi libffi 3.4.4 v
+github.setup        libffi libffi 3.4.5 v
+revision            0
+
+checksums           rmd160  ce1cba56dccf15e3f44c0697109fbbd5f516b674 \
+                    sha256  96fff4e589e3b239d888d9aa44b3ff30693c2ba1617f953925a70ddebcc102b2 \
+                    size    1391548
+
 github.tarball_from releases
 categories          devel
 license             MIT
@@ -18,10 +24,6 @@ long_description    The libffi library provides a portable, high level \
                     at run-time.
 
 homepage            https://www.sourceware.org/libffi/
-
-checksums           rmd160 77db9b55651fcf6e480c2103234a0f971ee5faeb \
-                    sha256 d66c56ad259a82cf2a9dfc408b32bf5da52371500b84745f7fb8b645712df676 \
-                    size   1362394
 
 patchfiles          powerpc-g3.patch
 
