rb-mime-types*: update maintainer

--- a/ruby/rb-mime-types-data/Portfile
+++ b/ruby/rb-mime-types-data/Portfile
@@ -6,7 +6,8 @@ PortGroup           ruby 1.0
 ruby.branches       3.3 3.2 3.1
 ruby.setup          mime-types-data 3.2024.0206 gem {} rubygems
 license             MIT
-maintainers         nomaintainer
+maintainers         {macports.halostatue.ca:austin @halostatue} \
+                    openmaintainer
 description         ${name} provides a registry for information \
                     about MIME media type definitions.
 long_description    {*}${description}
