--- a/ruby/rb-mime-types/Portfile
+++ b/ruby/rb-mime-types/Portfile
@@ -6,7 +6,8 @@ PortGroup           ruby 1.0
 ruby.branches       3.3 3.2 3.1
 ruby.setup          mime-types 3.5.2 gem {} rubygems
 license             {Ruby Artistic-1 GPL-2+}
-maintainers         nomaintainer
+maintainers         {macports.halostatue.ca:austin @halostatue} \
+                    openmaintainer
 description         Manages a MIME content-type that will return \
                     the content-type for a given filename.
 long_description    This library allows for the identification of a file's \
