py-gitpython: drop py27/py37 subports

--- a/python/py-gitpython/Portfile
+++ b/python/py-gitpython/Portfile
@@ -22,22 +22,9 @@ checksums           rmd160  4b055d972811315a74381731457e474917d7cf18 \
                     sha256  5b88f82b4f049ecd48e5a9b3e3501e824490a540d1b6092ae904e3a558850fcb \
                     size    502721
 
-python.versions     27 37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
-    if {${python.version} == 27} {
-        github.setup    gitpython-developers GitPython 2.1.15
-        revision        0
-        checksums       rmd160  209cf71e22518e3fb0b24376154bb03aabbca93f \
-                        sha256  ec23cdd597fcf7c16fa8c1a9311ade6eecef4f3e6c1feb953e1a9eaf170445da \
-                        size    523535
-    }
-
-    depends_build-append \
-                    port:py${python.version}-setuptools
-
     depends_lib-append \
                     port:py${python.version}-gitdb
-
-    livecheck.type  none
 }
