--- a/python/py-gitdb/Portfile
+++ b/python/py-gitdb/Portfile
@@ -16,24 +16,13 @@ maintainers         nomaintainer
 description         GitDB is a pure-Python git object database
 long_description    {*}${description}
 
-python.versions     27 37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 checksums           rmd160  6782400bbbc63c991b03deb5d09db45c4eb56b94 \
                     sha256  8730dc6d219f8f3e43008b26472fb1e9a69336181cab89c67c4ef7cf3423253c \
                     size    406504
 
 if {${name} ne ${subport}} {
-    if {${python.version} == 27} {
-        github.setup    gitpython-developers gitdb 2.0.6
-        revision        0
-        checksums       rmd160  8991fdb0bb948686d9af3b91dbb9a9985640690f \
-                        sha256  8358ca2481184108009118ee3437b51b934aa38544405388b6ca21dcbd3f109c \
-                        size    407378
-    }
-
-    depends_build-append \
-                    port:py${python.version}-setuptools
-
     depends_run-append \
                     port:py${python.version}-smmap
 }
