picotls: fix build on <10.7

--- a/net/picotls/Portfile
+++ b/net/picotls/Portfile
@@ -2,8 +2,13 @@
 
 PortSystem          1.0
 PortGroup           cmake 1.1
+PortGroup           compiler_blacklist_versions 1.0
 PortGroup           github 1.0
+PortGroup           legacysupport 1.1
 PortGroup           openssl 1.0
+
+# Need O_CLOEXEC
+legacysupport.newest_darwin_requires_legacy 10
 
 github.setup        h2o picotls eb013f761bf1dc3da244322d8569f57b33a95178
 version             2024.01.11
@@ -48,6 +53,10 @@ configure.args-append \
                     -DWITH_AEGIS=OFF \
                     -DWITH_DTRACE=OFF \
                     -DWITH_MBEDTLS=ON
+
+# https://github.com/h2o/picotls/issues/505
+compiler.blacklist-append \
+                    *gcc-4.* {clang < 500}
 
 destroot {
     move ${cmake.build_dir}/cli ${destroot}${prefix}/bin/picotls_cli
