py-ipykernel: update to 6.29.2

--- a/python/py-ipykernel/Portfile
+++ b/python/py-ipykernel/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-ipykernel
-version             6.24.0
+version             6.29.2
 revision            0
 categories-append   devel
 license             BSD
@@ -17,14 +17,14 @@ python.pep517_backend hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
-description         IPython Kernel for Jupyter.
-long_description    {*}${description}
+description         IPython Kernel for Jupyter
+long_description    {*}${description}.
 
 homepage            https://ipython.org/
 
-checksums           rmd160  4f2351703446946a63c45e451c989301ad33f052 \
-                    sha256  29cea0a716b1176d002a61d0b0c851f34536495bc4ef7dd0222c88b41b816123 \
-                    size    154452
+checksums           rmd160  57d1d5081cdc0b0198af0afb27c6e3ab586f268f \
+                    sha256  3bade28004e3ff624ed57974948116670604ac5f676d12339693f3142176d3f0 \
+                    size    161175
 
 if {${name} ne ${subport}} {
 
