--- a/python/py-ipython/Portfile
+++ b/python/py-ipython/Portfile
@@ -5,15 +5,14 @@ PortGroup           python 1.0
 PortGroup           select 1.0
 
 name                py-ipython
-version             8.14.0
+version             8.21.0
 revision            0
 categories-append   devel science
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     27 37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 
 maintainers         {aronnax @lpsinger} {stromnov @stromnov} openmaintainer
 
@@ -22,9 +21,9 @@ long_description    {*}${description}
 
 homepage            https://ipython.org/
 
-checksums           rmd160  703e6338e3df5aea1a4b86b1e9dd8063688b681d \
-                    sha256  1d197b907b6ba441b692c48cf2a3a2de280dc0ac91a3405b39349a50272ca0a1 \
-                    size    5470735
+checksums           rmd160  e119b7b313587830181ed3566e33ba6ba6889e1d \
+                    sha256  48fbc236fbe0e138b88773fa0437751f14c3645fb483f1d4c5dee58b37e5ce73 \
+                    size    5490331
 
 if {${name} ne ${subport}} {
     set python_major [string index ${python.version} 0]
@@ -32,57 +31,39 @@ if {${name} ne ${subport}} {
     depends_run-append  port:ipython_select \
                         port:ipython${python_major}_select
 
-    depends_lib-append  port:py${python.version}-appnope \
-                        port:py${python.version}-backcall \
-                        port:py${python.version}-decorator \
+    depends_lib-append  port:py${python.version}-decorator \
                         port:py${python.version}-jedi \
                         port:py${python.version}-matplotlib-inline \
                         port:py${python.version}-pexpect \
-                        port:py${python.version}-pickleshare \
                         port:py${python.version}-prompt_toolkit \
                         port:py${python.version}-pygments \
                         port:py${python.version}-stack_data \
                         port:py${python.version}-traitlets
 
-    if {${python.version} eq 27} {
-        version             5.8.0
-        revision            0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  8f11c03f31ed7d11d566f13eeda5cdcec8c07105 \
-                            sha256  4bac649857611baaaf76bc82c173aa542f7486446c335fe1a6c05d0d491c8906 \
-                            size    4977824
-        python.pep517       no
-        depends_lib-append  port:py${python.version}-setuptools \
-                            port:py${python.version}-backports-shutil_get_terminal_size \
-                            port:py${python.version}-pathlib2 \
-                            port:py${python.version}-gnureadline \
-                            port:py${python.version}-simplegeneric
-        depends_lib-delete  port:py${python.version}-backcall \
-                            port:py${python.version}-jedi
-    } elseif {${python.version} eq 37} {
-        version             7.30.1
-        revision            0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  4d87cbf576bd491eb0b5c6251891b458f5f52f3d \
-                            sha256  cb6aef731bf708a7727ab6cde8df87f0281b1427d41e65d62d4b68934fa54e97 \
-                            size    5154336
-        python.pep517       no
-        depends_lib-append  port:py${python.version}-setuptools
-    } elseif {${python.version} eq 38} {
-        version             8.12.2
+    if {${python.version} eq 38} {
+        version             8.12.3
         revision            0
         distname            ${python.rootname}-${version}
         checksums           rmd160  daa3d063bff985b885c55c8e9847d22524f7def6 \
                             sha256  c7b80eb7f5a855a88efc971fda506ff7a91c280b42cdae26643e0f601ea281ea \
                             size    5466964
-    }
-
-    if {${python.version} < 37} {
-        depends_lib-delete  port:py${python.version}-matplotlib-inline
-    }
-
-    if {${python.version} < 38} {
-        depends_lib-delete  port:py${python.version}-stack_data
+        depends_lib-append  port:py${python.version}-appnope \
+                            port:py${python.version}-backcall \
+                            port:py${python.version}-pickleshare \
+                            port:py${python.version}-typing_extensions
+    } elseif {${python.version} eq 39} {
+        version             8.18.1
+        revision            0
+        distname            ${python.rootname}-${version}
+        checksums           rmd160  115537ce4b2b7bbb4ea2bc391f4875cf437c3856 \
+                            sha256  ca6f079bb33457c66e233e4580ebfc4128855b4cf6370dddd73842a9563e8a27 \
+                            size    5486330
+        depends_lib-append  port:py${python.version}-exceptiongroup \
+                            port:py${python.version}-typing_extensions
+    } else {
+        if {${python.version} < 311} {
+            depends_lib-append  port:py${python.version}-exceptiongroup
+        }
     }
 
     select.entries      [list ipython py${python.version}-ipython py${python.version}-ipython] \
