py-ipykernel: drop py37 subport

--- a/python/py-ipykernel/Portfile
+++ b/python/py-ipykernel/Portfile
@@ -11,7 +11,7 @@ license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 python.pep517       yes
 python.pep517_backend hatch
 
@@ -27,16 +27,6 @@ checksums           rmd160  57d1d5081cdc0b0198af0afb27c6e3ab586f268f \
                     size    161175
 
 if {${name} ne ${subport}} {
-
-    if {${python.version} eq 37} {
-        version             6.21.3
-        revision            0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  cf826d0445626559a59b1d0088707865b3bd0697 \
-                            sha256  c8ff581905d70e7299bc1473a2f7c113bec1744fb3746d58e5b4b93bd8ee7001 \
-                            size    150659
-    }
-
     depends_lib-append  port:py${python.version}-debugpy \
                         port:py${python.version}-ipython \
                         port:py${python.version}-comm \
@@ -50,6 +40,4 @@ if {${name} ne ${subport}} {
                         port:py${python.version}-zmq \
                         port:py${python.version}-psutil \
                         port:py${python.version}-packaging
-
-    livecheck.type      none
 }
