tree-sitter: exclude pre-release candidates from livecheck

--- a/devel/tree-sitter/Portfile
+++ b/devel/tree-sitter/Portfile
@@ -61,3 +61,6 @@ subport ${name}-cli {
             ${destroot}${prefix}/bin/
     }
 }
+
+# Exclude pre-release candidates
+github.livecheck.regex  {([0-9.]+)}
