picotls: install headers

--- a/net/picotls/Portfile
+++ b/net/picotls/Portfile
@@ -12,7 +12,7 @@ legacysupport.newest_darwin_requires_legacy 10
 
 github.setup        h2o picotls eb013f761bf1dc3da244322d8569f57b33a95178
 version             2024.01.11
-revision            0
+revision            1
 categories          net security
 license             MIT
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -60,6 +60,8 @@ compiler.blacklist-append \
 
 destroot {
     move ${cmake.build_dir}/cli ${destroot}${prefix}/bin/picotls_cli
+    copy ${worksrcpath}/include/picotls ${destroot}${prefix}/include
+    copy ${worksrcpath}/include/picotls.h ${destroot}${prefix}/include
     foreach lib {libpicotls-core.a libpicotls-mbedtls.a libpicotls-minicrypto.a libpicotls-openssl.a} {
         copy ${cmake.build_dir}/${lib} ${destroot}${prefix}/lib
     }
