ngtcp2: update to 1.3.0, support picotls

--- a/net/ngtcp2/Portfile
+++ b/net/ngtcp2/Portfile
@@ -1,49 +1,69 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem              1.0
-PortGroup               cmake 1.1
 PortGroup               github 1.0
 PortGroup               openssl 1.0
 
-github.setup            ngtcp2 ngtcp2 1.2.0 v
+github.setup            ngtcp2 ngtcp2 1.3.0 v
 revision                0
 categories              net devel
 maintainers             {@barracuda156 gmail.com:vital.had} openmaintainer
 license                 MIT
-description             ngtcp2 project is an effort to implement RFC9000 QUIC protocol
+description             ${name} project is an effort to implement RFC9000 QUIC protocol
 long_description        {*}${description}
 homepage                https://nghttp2.org/ngtcp2
-checksums               rmd160  0acf2b5b52eec3cf2a28f781808c0bfcf752d3cc \
-                        sha256  15f3dd4cc4db2435bcd0b5253ccce4cbab26d18cc6ef4f00b5cb4af21ed06a0b \
-                        size    601707
-github.tarball_from     archive
+checksums               rmd160  5ff8f4018ae180caf84fdfc2cb4e93ea8d44fc16 \
+                        sha256  c3e386674103feedfedcc711190affcdec1c682af8a850469ecf1714d28c139b \
+                        size    615620
+github.tarball_from     releases
 
-depends_lib-append      path:lib/pkgconfig/gnutls.pc:gnutls \
-                        port:cunit \
-                        port:jemalloc \
-                        port:libev \
-                        port:nghttp3
+use_xz                  yes
 
-# Do not force build examples: https://github.com/ngtcp2/ngtcp2/issues/804
-patchfiles              patch-examples.diff
+depends_build-append    port:pkgconfig
+
+# Notice, QUIC via OpenSSL is unsupported presently:
+# https://github.com/ngtcp2/ngtcp2/issues/1034
+# Other dependencies are only used for examples:
+# https://github.com/ngtcp2/ngtcp2/issues/1129
+depends_lib-append      path:lib/pkgconfig/gnutls.pc:gnutls
 
 compiler.cxx_standard   2017
 
-configure.args-append   -DENABLE_EXAMPLES:BOOL=OFF \
-                        -DENABLE_GNUTLS:BOOL=ON \
-                        -DENABLE_JEMALLOC:BOOL=ON \
-                        -DENABLE_OPENSSL:BOOL=ON \
-                        -DENABLE_SHARED_LIB:BOOL=ON \
-                        -DENABLE_WERROR:BOOL=OFF
+configure.args-append   --disable-silent-rules \
+                        --enable-lib-only=yes \
+                        --enable-werror=no \
+                        --with-gnutls=yes
 
-# Until this is fixed: https://github.com/ngtcp2/ngtcp2/issues/1034
-configure.args-append   -DHAVE_SSL_IS_QUIC:BOOL=OFF
+variant picotls description "Enable PicoTLS" {
+    depends_lib-append  port:picotls
+    configure.args-append \
+                        --with-picotls=yes
+    configure.cppflags-append \
+                        -I${prefix}/include/picotls
+    configure.ldflags-append \
+                        -lpicotls-core -lpicotls-minicrypto -lpicotls-openssl
+}
 
-if {${os.platform} eq "darwin" && ${os.major} < 10} {
-    # Until jemalloc fixed for 10.5 and below: https://trac.macports.org/ticket/65945
-    depends_lib-delete  port:jemalloc
-    configure.args-replace \
-                        -DENABLE_JEMALLOC:BOOL=ON -DENABLE_JEMALLOC:BOOL=OFF
+# Do not force build examples:
+# https://github.com/ngtcp2/ngtcp2/issues/804
+variant examples description "Build examples" {
+    depends_lib-append  port:brotli \
+                        port:libev \
+                        port:nghttp3
+    if {(${os.platform} eq "darwin" && ${os.major} > 9) || \
+        ${os.platform} ne "darwin"} {
+        # https://trac.macports.org/ticket/65945
+        depends_lib-append \
+                        path:lib/pkgconfig/jemalloc.pc:jemalloc
+    }
+
+    compiler.cxx_standard \
+                        2020
+    configure.args-append \
+                        --with-libbrotlidec=yes \
+                        --with-libbrotlienc=yes
+    configure.args-delete \
+                        --enable-lib-only=yes
 }
 
 test.run                yes
