--- a/R/R-boot/Portfile
+++ b/R/R-boot/Portfile
@@ -6,15 +6,15 @@ PortGroup           R 1.0
 R.recommended       yes
 
 # This is a recommended package. Keep it CRAN-sourced.
-R.setup             cran cran boot 1.3-28.1
+R.setup             cran brazzale boot 1.3-29
 revision            0
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 license             Permissive
 description         Functions and datasets for bootstrapping
 long_description    {*}${description}. Recommended package.
-checksums           rmd160  524092c2e5cedb00a0ba309b924c00b9e0066adf \
-                    sha256  d4cde76fcc8ccc7ffa329de69147b66a6a93a10188e89342fd18207b1d02ff53 \
-                    size    236854
+checksums           rmd160  5b1bc7f5def9b9c1697485f9357c9ab30badd489 \
+                    sha256  ee6820fd271d56da64e578a3f449c9d60c76fe69834ce84599dde300ecf1fbfd \
+                    size    238463
 supported_archs     noarch
 
 depends_test-append port:R-MASS \
