h5fortran: fix build on Lion

--- a/fortran/h5fortran/Portfile
+++ b/fortran/h5fortran/Portfile
@@ -2,6 +2,7 @@
 
 PortSystem          1.0
 PortGroup           cmake 1.1
+PortGroup           compiler_blacklist_versions 1.0
 PortGroup           github 1.0
 PortGroup           mpi 1.0
 
@@ -20,8 +21,10 @@ github.tarball_from archive
 compilers.choose    cc fc f90
 mpi.setup           require_fortran -gcc44 -gcc45 -gcc46 -gcc47 -gcc48 -gcc49 -gcc5 -gcc6 -g95
 
+# Clang of 10.7 fails to build it.
+# https://github.com/macports/macports-ports/commit/772f5cb003aafac822a866132a775e93253ee683
 compiler.blacklist-append \
-                    {*gcc-[34].*} {macports-gcc-[56]}
+                    {*gcc-[34].*} {macports-gcc-[56]} {clang < 500}
 
 set python.branch   3.11
 set python.version  [join [split ${python.branch} "."] ""]
