R-lmomco: update to 2.4.14

--- a/R/R-lmomco/Portfile
+++ b/R/R-lmomco/Portfile
@@ -3,16 +3,17 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran william.asquith lmomco 2.4.13
+R.setup             cran william.asquith lmomco 2.4.14
 revision            0
 categories-append   math
 maintainers         nomaintainer
 license             GPL
-description         L-moments, censored l-moments, trimmed l-moments, l-comoments and many distributions
+description         L-moments, censored l-moments, trimmed l-moments, \
+                    l-comoments and many distributions
 long_description    {*}${description}
-checksums           rmd160  b3e47318e050a1dca8c5a0db022f2f8d2905cea4 \
-                    sha256  1acd60f94902d90f842f4989ca1f07fac7f6713b7b967a65ae32eea0764b6dc4 \
-                    size    1190050
+checksums           rmd160  f5f8eedf883a84070b5366ead13db7a3ce696d1b \
+                    sha256  9310fd354301c2c175866e0b0a1035c3bd90394b0ee14f39cce14b709cc64d25 \
+                    size    1194463
 supported_archs     noarch
 
 depends_lib-append  port:R-goftest \
