py-anyio: update to 4.3.0

--- a/python/py-anyio/Portfile
+++ b/python/py-anyio/Portfile
@@ -4,14 +4,14 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-anyio
-version             4.2.0
+version             4.3.0
 revision            0
 categories-append   devel
 license             MIT
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -20,20 +20,13 @@ long_description    {*}${description}
 
 homepage            https://github.com/agronholm/anyio
 
-checksums           rmd160  b65397d80ea5b955560233bf1e52c874f35bbc5d \
-                    sha256  e1875bb4b4e2de1669f4bc7869b6d3f54231cdced71605e6e64c9be77e3be50f \
-                    size    158770
+checksums           rmd160  5d78ad6d9af62f96654b8f6604515930c124d3d0 \
+                    sha256  f75253795a87df48568485fd18cdd2a3fa5c4f7c5be8e5e36637733fce06fed6 \
+                    size    159642
 
 if {${name} ne ${subport}} {
     depends_build-append \
                         port:py${python.version}-setuptools_scm
-
-    if {${python.version} eq 37} {
-        version             3.7.1
-        checksums           rmd160  97fa8656e9ecb92030c9868a93a957793dea81d3 \
-                            sha256  44a3c9aba0f5defa43261a8b3efb97891f2bd7d804e0e1f56419befa1adfc780 \
-                            size    142927
-    }
 
     depends_lib-append  port:py${python.version}-idna \
                         port:py${python.version}-sniffio
@@ -42,6 +35,4 @@ if {${name} ne ${subport}} {
         depends_lib-append  port:py${python.version}-exceptiongroup \
                             port:py${python.version}-typing_extensions
     }
-
-    livecheck.type      none
 }
