duckdb: unbreak 0.10.0 for < 10.7

--- a/databases/duckdb/Portfile
+++ b/databases/duckdb/Portfile
@@ -32,7 +32,8 @@ checksums           rmd160  692c7857b78c53486dc06d1327c5a00b9ea44dbb \
                     size    79037968
 
 patchfiles-append   no-ccache.patch \
-                    no-default-tarball-version.patch
+                    no-default-tarball-version.patch \
+                    fix-libproc-for-older-macOS.patch
 
 configure.args-append \
                     -DBUILD_PARQUET_EXTENSION=TRUE \
