imath: backport a fix from upstream

--- a/graphics/imath/Portfile
+++ b/graphics/imath/Portfile
@@ -7,7 +7,7 @@ PortGroup                       legacysupport 1.1
 
 github.setup                    AcademySoftwareFoundation imath 3.1.10 v
 github.tarball_from             archive
-revision                        0
+revision                        1
 
 categories                      graphics
 license                         BSD
@@ -30,6 +30,9 @@ checksums                       rmd160  b463e098fedccdf4b8ada445bf2db98449698d0e
 # NOTE: legacysupport needed for 'CLOCK_MONOTONIC'
 
 depends_build-append            port:pkgconfig
+
+# https://github.com/AcademySoftwareFoundation/Imath/issues/367
+patchfiles-append               patch-std-isfinite.diff
 
 compiler.cxx_standard           2014
 
