jsoncons: skip a few tests with libstdc++, fix 32-bit

--- a/devel/jsoncons/Portfile
+++ b/devel/jsoncons/Portfile
@@ -19,4 +19,15 @@ checksums               rmd160  4861f8442599537fe6b001673474250366ae8043 \
                         sha256  3e3525325c88b33f15af2e1f3cf7a1893a49e47aa787a2df723a098b3a4b20b1 \
                         size    1422526
 
+compiler.cxx_standard   2011
+
+# https://github.com/danielaparker/jsoncons/issues/488
+if {${configure.cxx_stdlib} ne "libc++"} {
+    patchfiles-append   patch-disable-broken-tests.diff
+}
+# Should be build_arch here, not configure.build_arch:
+if {${build_arch} in [list arm i386 ppc]} {
+    patchfiles-append   patch-32-bit.diff
+}
+
 test.run                yes
