legacy-support: Fix universal build on 11.x
On macOS 11, optool is used to construct the LegacySupportSystem
library, but that doesn't work on arm64.  Prior to this fix, the
decision to use it was based on build_arch, which is problematic for
universal builds in two ways:

1) Universal builds on x86_64 didn't work at all, due to attempting to
apply optool to the arm64 slice.

2) Universal builds on arm64 failed to apply optool to the x86_64
slice.

This reworks the logic to base the optool dependency on whether any
non-arm64 slice will be built, and to base the decision to use it
on the architecture of each individual slice.  It does not fix the
problem where LegacySupportSystem is missing on arm64 -universal,
and lacks the arm64 slice on +universal.

In principle, this should get a revbump due to the change in the
installed content in the arm64 +universal case.  But since
legacy-support isn't even applicable to 11.x, that doesn't seem worth
the unnecessary churn.

TESTED:
Now builds successfully on 11.x x86_64 and arm64.
Tested on 10.4-10.5 ppc, 10.4-10.6 i386, 10.4-12.x x86_64, 11.x-14.x
arm64.

--- a/devel/legacy-support/Portfile
+++ b/devel/legacy-support/Portfile
@@ -111,20 +111,41 @@ proc tiger_copy {from to} {
     }
 }
 
-# The legacy-support build cannot create the LegacySupportSystem library directly
-# on newer systems as the reexport link option to /usr/lib/libSystem.B.dylib
-# does not work, due to the file system library cache added in macOS11.
-# Fallback to using optool here. Optool also currently not working on arm.
-if { ${build_arch} ne "arm64" && ${os.major} > ${max_darwin_reexport} && ${os.major} <= ${max_darwin_optool} } {
-    depends_build-append port:optool
+# The legacy-support build cannot create the LegacySupportSystem library
+# directly on newer systems as the reexport link option to
+# /usr/lib/libSystem.B.dylib does not work, due to the file system
+# library cache added in macOS11.
+#
+# Fall back to using optool here. Optool does not currently work on arm64.
+# This means that LegacySupportSystem will be missing on arm64, and that
+# universal builds of LegacySupportSystem will lack the arm64 slice
+# (which will produce a warning).
+
+if { ${os.major} > ${max_darwin_reexport}
+     && ${os.major} <= ${max_darwin_optool} } {
+     # First determine whether any non-arm64 slice will be built
+    set optool_needed no
+    foreach arch ${muniversal.architectures} {
+        if { ${arch} ne "arm64"} {
+            set optool_needed yes
+        }
+    }
+    # If any non-arm64, add optool dependency
+    if { ${optool_needed} } {
+        depends_build-append port:optool
+        depends_skip_archcheck-append optool
+    }
+    # After destroot, apply optool to any non-arm64 slice
     post-destroot {
-        set legSupp   ${prefix}/lib/libMacportsLegacySupport.dylib
-        set legSystem ${prefix}/lib/libMacportsLegacySystem.B.dylib
-        if {![file exists ${destroot}${legSystem}]} {
-            copy ${destroot}${legSupp} ${destroot}${legSystem}
-            system "${prefix}/bin/optool install -c reexport -p /usr/lib/libSystem.B.dylib -t ${destroot}${legSystem}"
-        } else {
-            ui_warn "${destroot}${legSystem} already exists."
+        if { ${muniversal.build_arch} ne "arm64" } {
+            set legSupp   ${prefix}/lib/libMacportsLegacySupport.dylib
+            set legSystem ${prefix}/lib/libMacportsLegacySystem.B.dylib
+            if {![file exists ${destroot}${legSystem}]} {
+                copy ${destroot}${legSupp} ${destroot}${legSystem}
+                system "${prefix}/bin/optool install -c reexport -p /usr/lib/libSystem.B.dylib -t ${destroot}${legSystem}"
+            } else {
+                ui_warn "${destroot}${legSystem} already exists."
+            }
         }
     }
 }
