nng: update to 1.7.2

--- a/devel/nng/Portfile
+++ b/devel/nng/Portfile
@@ -9,7 +9,7 @@ PortGroup           legacysupport 1.1
 # Not strictly necessary, but seems to improve tests performance marginally.
 legacysupport.newest_darwin_requires_legacy 10
 
-github.setup        nanomsg nng 1.7.1 v
+github.setup        nanomsg nng 1.7.2 v
 revision            0
 license             MIT
 categories          devel
@@ -17,9 +17,11 @@ maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 description         Light-weight brokerless messaging
 long_description    {*}${description}
 homepage            https://nng.nanomsg.org
-checksums           rmd160  5243e9a9a659773c8484bab9f36a39f9e2e124f7 \
-                    sha256  68077d31d6bdcfe3fd049fae0d90a6909b11a179c6051a5dc1bcf8db47798b4d \
-                    size    741829
+checksums           rmd160  25da37bb5e7def1d9bfc0cdb6d48a98678c0246b \
+                    sha256  40e6af7bdd5d02ee98ba8fe5fd5c149ce3e5a555f202cdc837e3ead2d7cc7534 \
+                    size    742904
+github.tarball_from archive
+
 cmake.generator     Ninja
 
 depends_lib-append  port:mbedtls3
