R-hibayes: update to 3.0.3

--- a/R/R-hibayes/Portfile
+++ b/R/R-hibayes/Portfile
@@ -3,16 +3,17 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran YinLiLin hibayes 3.0.2
+R.setup             cran YinLiLin hibayes 3.0.3
 revision            0
 categories-append   math
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 license             GPL-3
 description         Individual-level, summary-level and single-step Bayesian regression model
 long_description    {*}${description}
-checksums           rmd160  4664826e3907cb478833ffbea42e64382587cf4f \
-                    sha256  f338c52d7f1f900095d27418db8968b5a64a6098c35cb104eb02252a6fed07d9 \
-                    size    183137
+homepage            https://github.com/YinLiLin/hibayes
+checksums           rmd160  96d9dce30a8a99a98978561744b576e3b05ed7f2 \
+                    sha256  a687c4c4cbfb2a11da1f6c517e6ee4bda686801828c74e9dac9709a420de7313 \
+                    size    183143
 
 depends_lib-append  port:R-BH \
                     port:R-bigmemory \
