R-R-rhdf5*: update to current versions

--- a/R/R-Rhdf5lib/Portfile
+++ b/R/R-Rhdf5lib/Portfile
@@ -3,29 +3,32 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             bioconductor grimbough Rhdf5lib 1.24.0
+R.setup             bioconductor grimbough Rhdf5lib 1.24.2
 revision            0
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 license             Artistic-2
 description         HDF5 library as an R package
 long_description    {*}${description}
 homepage            https://github.com/grimbough/Rhdf5lib
-checksums           rmd160  a37f71f6900c91759b95d4e4879b0bdf1abd5e3b \
-                    sha256  ae6e4943c5e6b701d00173083f19f9ac6a06fcf9508bd2b5412666db5c7ec282 \
-                    size    12083512
+checksums           rmd160  4e1547cab98e14831d1992a13871ecf488f2f222 \
+                    sha256  65522399d08dc95ee220061718ddc1c35f8a3c3bbf91179bc1b6fedddb294f2c \
+                    size    12062265
 
 # FIXME: reason is unknown at the moment, but recent versions may fail to build on Rosetta:
 # See: https://github.com/grimbough/Rhdf5lib/issues/53
-platform darwin 10 powerpc {
-    # Build system uses multiple configure scripts, and it gets messy on Rosetta otherwise.
-    patchfiles      patch-rosetta.diff
+# Switch to build_arch due to: https://trac.macports.org/ticket/69301
+platform darwin 10 {
+    if {${configure.build_arch} eq "ppc"} {
+        # Build system uses multiple configure scripts, and it gets messy on Rosetta otherwise.
+        patchfiles      patch-rosetta.diff
 
-    post-patch {
-        reinplace "s,@BUILD@,powerpc-apple-darwin10,g" ${worksrcpath}/src/Makevars.in
-    }
+        post-patch {
+            reinplace "s,@BUILD@,powerpc-apple-darwin10,g" ${worksrcpath}/src/Makevars.in
+        }
 
-    build.args-append \
+        build.args-append \
                     --configure-args="--build=powerpc-apple-darwin10"
+    }
 }
 
 depends_test-append port:R-BiocStyle \
