terraform-1.3: update to 1.3.10

--- a/sysutils/terraform/Portfile
+++ b/sysutils/terraform/Portfile
@@ -110,22 +110,22 @@ subport terraform-1.4 {
 }
 
 subport terraform-1.3 {
-    set patchNumber     9
-    revision            1
+    set patchNumber     10
+    revision            0
 
     set armAvailable    yes
     # Keep dist_subdir since version has been stealth updated and there might be conflicts with the checksums.
     # It is not needed for other subports since there are no conflicts.
-    dist_subdir         ${name}/[terraformDistBase]_1
+    dist_subdir         ${name}/[terraformDistBase]
 
     checksums           [terraformDistBase]_amd64.zip \
-                        rmd160  0683c695a7c3c40bdb5949a7a021e1c38a89880a \
-                        sha256  a73326ea8fb06f6976597e005f8047cbd55ac76ed1e517303d8f6395db6c7805 \
-                        size    21194871 \
+                        rmd160  b8f26c8d223d6994cbab22bc83bb7190ba807386 \
+                        sha256  e5cf68ef9b259503abf515a1716fcfe21d46af22e24b8ebbbe7849fbfafb428c \
+                        size    21195636 \
                         [terraformDistBase]_arm64.zip \
-                        rmd160  3a13916d9c3722586242daeda5536ca20e75f2ec \
-                        sha256  d8a59a794a7f99b484a07a0ed2aa6520921d146ac5a7f4b1b806dcf5c4af0525 \
-                        size    19793371
+                        rmd160  400bb1a0fa0ee0c09257ffe51e58508737ff74cf \
+                        sha256  39cf7882108034f78c0d9144153271efb11ba99924170828eda9b0196f3da6fd \
+                        size    19794701
 
     set customDistSubDir no
 }
