NetBeans: fix arm64 fix so that port is truly noarch

--- a/aqua/NetBeans/Portfile
+++ b/aqua/NetBeans/Portfile
@@ -6,6 +6,7 @@ PortGroup           java 1.0
 name                NetBeans
 set name_lower      [string tolower ${name}]
 version             21
+revision            1
 categories          aqua devel java
 license             Apache-2
 maintainers         openmaintainer {amake @amake}
@@ -68,12 +69,10 @@ destroot {
     # For some reason removing all architectures but x86_64 fixes the issue.
     #
     # TODO: When arm64 support is added to these files, see if this hack is still helpful
-    if {${build_arch} eq "arm64"} {
-        system -W ${destroot}${prefix}/share/java/netbeans/profiler/lib/deployed/jdk15/mac/ \
-            "lipo -thin x86_64 libprofilerinterface.jnilib -o libprofilerinterface.jnilib"
-        system -W ${destroot}${prefix}/share/java/netbeans/profiler/lib/deployed/jdk16/mac/ \
-            "lipo -thin x86_64 libprofilerinterface.jnilib -o libprofilerinterface.jnilib"
-    }
+    system -W ${destroot}${prefix}/share/java/netbeans/profiler/lib/deployed/jdk15/mac/ \
+        "lipo -thin x86_64 libprofilerinterface.jnilib -o libprofilerinterface.jnilib"
+    system -W ${destroot}${prefix}/share/java/netbeans/profiler/lib/deployed/jdk16/mac/ \
+        "lipo -thin x86_64 libprofilerinterface.jnilib -o libprofilerinterface.jnilib"
 }
 
 universal_variant   no
