container-diff: update to 0.19.0

--- a/sysutils/container-diff/Portfile
+++ b/sysutils/container-diff/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/GoogleContainerTools/container-diff 0.17.0 v
+go.setup            github.com/GoogleContainerTools/container-diff 0.19.0 v
 go.offline_build    no
 github.tarball_from archive
 revision            0
@@ -25,9 +25,9 @@ license             Apache-2
 maintainers         {gmail.com:herby.gillot @herbygillot} \
                     openmaintainer
 
-checksums           rmd160  e6875a0fb877e8cd909b6712e5bedf4b26cb69e7 \
-                    sha256  b1d909c4eff0e3355ba45516daddef0adfa4cdcd0c8b41863060c66f524353f9 \
-                    size    2565245
+checksums           rmd160  4ea36bcc1de683a1a382e3af05e3ae317a8fb8e5 \
+                    sha256  ba369effbe0d9f556cbcdadd5882eeb6346a105c11e5f07ffccb7e834cadefe6 \
+                    size    311948
 
 build.cmd           make
 build.args          GIT_VERSION=${github.tag_prefix}${version}
