--- a/shells/tcsh/Portfile
+++ b/shells/tcsh/Portfile
@@ -1,30 +1,29 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
-PortSystem      1.0
-PortGroup       github 1.0
+PortSystem          1.0
+PortGroup           github 1.0
 
-github.setup    tcsh-org tcsh 6_24_10 TCSH
-github.tarball_from \
-                archive
-version         [string map {_ .} ${github.version}]
-revision        0
-categories      shells
-license         BSD
-maintainers     nomaintainer
+github.setup        tcsh-org tcsh 6_24_10 TCSH
+github.tarball_from archive
+version             [string map {_ .} ${github.version}]
+revision            0
+categories          shells
+license             BSD
+maintainers         nomaintainer
 
-description     C shell with file name completion and command line editing
+description         C shell with file name completion and command line editing
 
-long_description \
+long_description    \
     Tcsh is a version of the Berkeley C-Shell, with the addition of: a  \
     command line editor, command and file name completion, listing, etc.\
     and a bunch of small additions to the shell itself.
 
-homepage        https://www.tcsh.org/
+homepage            https://www.tcsh.org/
 
-checksums       rmd160  f92f10d50fcd1c998904d90d1e2e98417d8d202f \
-                sha256  a5d18d38fcccb038bd0c978e69984927cb7711c5adb8fabcc347edc9a46ac76d \
-                size    957549
+checksums           rmd160  f92f10d50fcd1c998904d90d1e2e98417d8d202f \
+                    sha256  a5d18d38fcccb038bd0c978e69984927cb7711c5adb8fabcc347edc9a46ac76d \
+                    size    957549
 
-destroot.target install install.man
-depends_lib     port:libiconv \
-                port:ncurses
+destroot.target     install install.man
+depends_lib         port:libiconv \
+                    port:ncurses
